# pc-api

./: .env.example  README.md  docker-compose.yml  init.sql  mkdocs.yml  pyproject.toml
app/: main.py  settings.py
app/api/: routes.py  schemas.py  secure.py  utils.py
app/api/exc/: __init__.py  exceptions.py  handler.py
app/infra/database/: adapter.py  config.py  entity.py
app/meetings/: domain.py  entities.py  routes.py  schemas.py
docs/: Avaliacao_Regional_doc.md  Regioanl-doc.md  Reunioes_doc.md  creating_routes.md  database.md  domain_driven_design.md  index.md  patrimonio_doc.md  pontuacao-doc.md  project_structure.md  tesouraria-doc.md
