[project]
name = "pc-api"
version = "0.1.0"
description = "Pioneiros da Colina API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.2.0",
    "fastapi>=0.116.1",
    "orjson>=3.11.1",
    "python-decouple>=3.8",
    "pytz>=2025.2",
    "secure>=1.0.1",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = ["httpx>=0.28.1", "pytest>=8.4.1", "ruff>=0.12.7"]
